--- a/src/config.toml
+++ b/src/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://wizhi.github.com/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Pedantic Programmer"
 theme = "kiss"
